package com.sghss.backend.domain.enums;

public enum Role {
    ADMINISTRADOR,
    PROFISSIONAL,
    PACIENTE
} 